--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'origami-labels'
-description: 'Sync a repo\'s issue labels with the standard Origami set'
+name: origami-labels
+description: Sync a repo's issue labels with the standard Origami set
 runs:
-  using: 'node12'
-  main: 'index.js'
+  using: node12
+  main: index.js
