Run workflow on all issue and pull-request events

--- a/.github/workflows/sync-repo-labels.yml
+++ b/.github/workflows/sync-repo-labels.yml
@@ -1,9 +1,5 @@
 
-# Sync labels whenever an issue is opened
-on:
-  issues:
-    types: [opened]
-
+on: [issues, pull_request]
 jobs:
   sync-labels:
     runs-on: ubuntu-latest
