--- a/.github/workflows/sync-repo-labels.yml
+++ b/.github/workflows/sync-repo-labels.yml
@@ -4,6 +4,6 @@ jobs:
     runs-on: ubuntu-latest
     name: Sync repository labels
     steps:
-      - uses: Financial-Times/origami-labels@master
+      - uses: Financial-Times/origami-labels@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
